logs/dag_id=data_ingestion/run_id=manual__2024-01-21T14:52:12.087153+00:00/task_id=load_data/attempt=1.log
[2024-01-21T14:52:16.429+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: data_ingestion.load_data manual__2024-01-21T14:52:12.087153+00:00 [queued]>
[2024-01-21T14:52:16.433+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: data_ingestion.load_data manual__2024-01-21T14:52:12.087153+00:00 [queued]>
[2024-01-21T14:52:16.433+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 1
[2024-01-21T14:52:16.438+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): load_data> on 2024-01-21 14:52:12.087153+00:00
[2024-01-21T14:52:16.440+0000] {standard_task_runner.py:57} INFO - Started process 41299 to run task
[2024-01-21T14:52:16.442+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'data_ingestion', 'load_data', 'manual__2024-01-21T14:52:12.087153+00:00', '--job-id', '323', '--raw', '--subdir', 'DAGS_FOLDER/fetch-api-data.py', '--cfg-path', '/tmp/tmp9x8fzaue']
[2024-01-21T14:52:16.443+0000] {standard_task_runner.py:85} INFO - Job 323: Subtask load_data
[2024-01-21T14:52:16.461+0000] {task_command.py:416} INFO - Running <TaskInstance: data_ingestion.load_data manual__2024-01-21T14:52:12.087153+00:00 [running]> on host 1cee5fdf7640
[2024-01-21T14:52:16.493+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='data_ingestion' AIRFLOW_CTX_TASK_ID='load_data' AIRFLOW_CTX_EXECUTION_DATE='2024-01-21T14:52:12.087153+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-21T14:52:12.087153+00:00'
[2024-01-21T14:52:16.494+0000] {sql.py:274} INFO - Executing: INSERT INTO country_holiday(%s) VALUES %s ON CONFLICT DO NOTHING %cols
[2024-01-21T14:52:16.497+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-01-21T14:52:16.501+0000] {base.py:73} INFO - Using connection ID 'postgres_conn' for task execution.
[2024-01-21T14:52:16.534+0000] {sql.py:418} INFO - Running statement: INSERT INTO country_holiday(%s) VALUES %s ON CONFLICT DO NOTHING %cols, parameters: None
[2024-01-21T14:52:16.535+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "%"
LINE 1: INSERT INTO country_holiday(%s) VALUES %s ON CONFLICT DO NOT...
                                    ^

[2024-01-21T14:52:16.539+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=data_ingestion, task_id=load_data, execution_date=20240121T145212, start_date=20240121T145216, end_date=20240121T145216
[2024-01-21T14:52:16.543+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 323 for task load_data (syntax error at or near "%"
LINE 1: INSERT INTO country_holiday(%s) VALUES %s ON CONFLICT DO NOT...
                                    ^
; 41299)
[2024-01-21T14:52:16.574+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2024-01-21T14:52:16.582+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
